# corpus-rag

./: .gitignore  CLAUDE.md  README.md  analyze_corpus.py  config_loader.py  context_generator.py  corpus_config.template.yaml  download_onnx_model.py  indexer.py  mcp_server.py  pyproject.toml  rebuild_fts.py  reindex.py  retriever.py  run_parser.py  server.py  summary_generator.py
deploy/: deploy.sh
eval/: evaluate.py
parser/: __init__.py  batch.py  checkpoint.py  detection.py  ocr.py  processor.py
parser/extraction/: __init__.py  header_footer.py  heading_detector.py  image_extractor.py  section_marker.py  table_extractor.py  text_extractor.py
parser/output/: __init__.py  document.py  json_writer.py  markdown.py
tests/: test_analyze_corpus.py  test_config_loader.py  test_indexer.py  test_integration.py  test_mcp_server.py  test_retriever.py
