[project]
name = "corpus-rag"
version = "0.1.0"
description = "Config-driven RAG pipeline: PDF parser, semantic search, and MCP server for any document corpus"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ricardo Rivera" }]
keywords = ["pdf", "parser", "rag", "mcp", "lancedb", "config-driven"]

dependencies = [
    # RAG core (retrieval & MCP server — runs on VM without PyTorch)
    "lancedb",
    "pandas",
    "numpy",
    "mcp",
    "onnxruntime",
    "tokenizers",
    "huggingface-hub",
    "pyyaml",
    "anthropic",  # rerank, contextual embeddings, summaries (degrades gracefully without API key)
    "python-dotenv",
]

[project.optional-dependencies]
local = [
    # Parser (PDF extraction)
    "pymupdf>=1.26.0",
    "pymupdf4llm>=0.2.9",
    "ocrmypdf>=16.0.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    # Indexer (uses SentenceTransformer + PyTorch for GPU/MPS)
    "sentence-transformers",
    "einops",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["parser"]
